row wrap bug fix

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -107,6 +107,6 @@
     }
 }
 
-.ant-row {
-  flex-flow: nowrap;
-}
+// .ant-row {
+//   flex-flow: nowrap;
+// }
